--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
  <div class="container-fluid" style="background: #f8ecd7;height: 50px;border: 1px solid #f8ecd7;">
  </div>
  	<div class="container-fluid" id="about" style="background: #f8ecd7;">
- 		<li style="font-size: 30px;text-align: center;color: orange;"><i  class="fa-brands fa-canadian-maple-leaf"></i></li>
- 		<li style="font-size: 50px;text-align: center;">WHAT'S YOUR VIBE?</li>
+ 		<li type="none" style="font-size: 30px;text-align: center;color: orange;"><i  class="fa-brands fa-canadian-maple-leaf"></i></li>
+ 		<li  type="none" style="font-size: 50px;text-align: center;">WHAT'S YOUR VIBE?</li>
  	</div>
     <div class="container-fluid" style="background: #f8ecd7;height: 50px;border: 1px solid #f8ecd7;">
     </div>
@@ -242,8 +242,8 @@
     <div class="container-fluid" style="background: #f8ecd7;">
         <div class="row text-center">
             <div class="col-md-12 col-sm-12">
-        <li style="font-size: 30px;text-align: center;color: orange;"><i  class="fa-brands fa-canadian-maple-leaf"></i></li>
-        <li  style="font-size: 50px;text-align: center;">IN THE SPOT LIGHT</li>
+        <li  type="none" style="font-size: 30px;text-align: center;color: orange;"><i  class="fa-brands fa-canadian-maple-leaf"></i></li>
+        <li  type="none" style="font-size: 50px;text-align: center;">IN THE SPOT LIGHT</li>
         </div>
         </div>
     </div>
@@ -358,4 +358,5 @@
         });
     </script>
  </body>
+
 </html>
