--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="img-fluid" src="image\w1.jpg" alt="Manywar" class="d-block" style="width:100%;height:600px!important;">
+                <img class="img-fluid" src="113.jpg" alt="Manywar" class="d-block" style="width:100%;height:600px!important;">
                 
                 <div class="carousel-caption">
                     <h3  style="font-size: 50px;justify-content: center;">What's special today?</h3>
@@ -257,7 +257,7 @@
         </div>
         <div id="jadoo" class="row mt-5">
             <div class="col-md-4 offset-md-1 col-sm-12 mt-5">
-            <img class="img-fluid" style="height: 400px;width: 100%;"  src="image\w25.jfif"><br/>
+            <img class="img-fluid" style="height: 400px;width: 100%;"  src="111.png"><br/>
             <h6 style="font-weight: bold;font-style: italic;text-align: justify;">Your Personal Stylist At Your Service!</h6>
             <h6 style="font-weight: bold;font-style: italic;text-align: justify;">Consult our expert stylist to curate a look for your D day</h6>
             <button class="btn" data-bs-toggle="modal" data-bs-target="#login" style="background:orange;color: white;">Book A Video Call</button>
@@ -360,3 +360,4 @@
  </body>
 
 </html>
+
