--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+	<style>
+		.nav-link:hover
+		{
+			color:yellow;
+		}
+	</style>
 </head>
 <body>
 	
@@ -170,18 +176,18 @@
             	<div class="row">
             		<div class="col-md-3 col-sm-3">
                		 <img class="img-fluid" src="image\w5.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Kurtas</p>
-                     <p style="font-size: 30px;">Look Tranding</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Kurtas</p>
+                     <p style="font-size: 30px;text-align:center">Look Tranding</p>
                 	</div>
                 	<div class="col-md-3 offset-md-1 col-sm-3 offset-sm-1 mt-5">
                		 <img class="img-fluid" src="image\w6.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Jackets</p>
-                     <p style="font-size: 30px;">Look Royal</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Jackets</p>
+                     <p style="font-size: 30px;text-align:center">Look Royal</p>
                 	</div>
                 	<div class="col-md-3 offset-md-1 col-sm-3 offset-sm-1">
                		 <img class="img-fluid" src="image\w7.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Sherwani</p>
-                     <p style="font-size: 30px;">Look Regal</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Sherwani</p>
+                     <p style="font-size: 30px;text-align:center">Look Regal</p>
                 	</div>
                 </div>
             </div>
@@ -189,18 +195,18 @@
                 <div class="row">
             		<div class="col-md-3 col-sm-3">
                		 <img class="img-fluid" src="image\w8.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Indo Western</p>
-                     <p style="font-size: 30px;">Look Stylish</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Indo Western</p>
+                     <p style="font-size: 30px;text-align:center">Look Stylish</p>
                 	</div>
                 	<div class="col-md-3 offset-md-1 col-sm-3 offset-sm-1 mt-5">
                		 <img class="img-fluid" src="image\w9.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Kurta Set</p>
-                     <p style="font-size: 30px;">Look Elegant</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Kurta Set</p>
+                     <p style="font-size: 30px;text-align:center">Look Elegant</p>
                 	</div>
                 	<div class="col-md-3 offset-md-1 col-sm-3 offset-sm-1">
                		 <img class="img-fluid" src="image\w10.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Lehenga</p>
-                     <p style="font-size: 30px;">Look Divine</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Lehenga</p>
+                     <p style="font-size: 30px;text-align:center">Look Divine</p>
                 	</div>
                 </div>
             </div>
@@ -208,18 +214,18 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-3">
                      <img class="img-fluid" src="image\w11.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Kidswear</p>
-                     <p style="font-size: 30px;">Look Adorable</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Kidswear</p>
+                     <p style="font-size: 30px;text-align:center">Look Adorable</p>
                     </div>
                     <div class="col-md-3 offset-md-1 col-sm-3 offset-sm-1 mt-5">
                      <img class="img-fluid" src="image\w12.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Saree</p>
-                     <p style="font-size: 30px;">Look Stunning</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Saree</p>
+                     <p style="font-size: 30px;text-align:center">Look Stunning</p>
                     </div>
                     <div class="col-md-3 offset-md-1 col-sm-3 offset-sm-1">
                      <img class="img-fluid" src="image\w13.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p style="color:orange;font-size: 20px;font-style: italic;">Shop Short Kurta</p>
-                     <p style="font-size: 30px;">Look Vibrant</p>
+                     <p style="color:orange;font-size: 20px;font-style: italic;text-align:center">Shop Short Kurta</p>
+                     <p style="font-size: 30px;text-align:center">Look Vibrant</p>
                     </div>
                 </div>
             </div>
@@ -360,4 +366,5 @@
  </body>
 
 </html>
+
 
