--- a/women.html
+++ b/women.html
@@ -8,12 +8,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
-<body>
+<body style="overflow-x:hidden ;">
 	<div class="conatiner-fluid" style="background: #f8ecd7">
 				<div class="row g-5">
                     <div class="col-md-3 col-sm-3 mt-5">
                      <img class="img-fluid" src="image\w18.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
-                     <p>Dark Cream</p>
+                     <p >Dark Cream</p>
                      <p><i class="fa-solid fa-indian-rupee-sign"></i>12999</p>
                      <button class="btn btn-primary">Buy</button>
                     </div>
@@ -74,3 +74,4 @@
 </body>
 
 </html>
+
