--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             </div>
             <div class="col-md-6 col-sm-12 mt-2">
                 <p style="color:white;font-weight: bold;">Keep In Touch</p>
-               <p style="color:orange;"><i class="fa-brands fa-facebook-f"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin-in"></i><i class="fa-brands fa-youtube"></i></p>
+               <p style="color:orange;"><a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a><a href="https://x.com"><i class="fa-brands fa-twitter"></i></a><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a><a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a><a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></p>
             </div>
         </div>
         <p align="center" style="color:white;font-weight: bold;">© 2025 Vedant Fashions Ltd. All rights reserved.</p>
@@ -366,5 +366,6 @@
  </body>
 
 </html>
+
 
 
