--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 	<style>
-		.nav-link:hover
+		.one:hover
 		{
 			color:yellow;
 		}
@@ -26,15 +26,15 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="Navbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="#home">HOME</a></li>
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="#about">ABOUT</a></li>
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="men.html">MEN</a></li>
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="women.html">WOMEN</a></li>
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="kids.html">KIDS</a></li>
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="#jadoo">BLOGS</a></li>
+                    <li class="nav-item"><a class="nav-link text-light one js-scroll-trigger" href="#home">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link text-light one js-scroll-trigger" href="#about">ABOUT</a></li>
+                    <li class="nav-item"><a class="nav-link text-light one js-scroll-trigger" href="men.html">MEN</a></li>
+                    <li class="nav-item"><a class="nav-link text-light one js-scroll-trigger" href="women.html">WOMEN</a></li>
+                    <li class="nav-item"><a class="nav-link text-light one js-scroll-trigger" href="kids.html">KIDS</a></li>
+                    <li class="nav-item"><a class="nav-link text-light one js-scroll-trigger" href="#jadoo">BLOGS</a></li>
                     
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="card.html"><i class="fa-regular fa-user"></i></a></li>
-                    <li class="nav-item"><a class="nav-link text-light js-scroll-trigger" href="#contact">CONTACT</a></li>
+                    <li class="nav-item"><a class="nav-link text-light one js-scroll-trigger" href="card.html"><i class="fa-regular fa-user"></i></a></li>
+                    <li class="nav-item"><a class="nav-link text-light  one js-scroll-trigger" href="#contact">CONTACT</a></li>
                 </ul>
             </div>
           </div>
@@ -351,7 +351,7 @@
             </div>
             <div class="col-md-6 col-sm-12 mt-2">
                 <p style="color:white;font-weight: bold;">Keep In Touch</p>
-               <p style="color:orange;"><a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a><a href="https://x.com"><i class="fa-brands fa-twitter"></i></a><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a><a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a><a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></p>
+               <p ><a style="color:orange;" href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a><a style="color:orange;" href="https://x.com"><i class="fa-brands fa-twitter"></i></a><a style="color:orange;" href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a><a style="color:orange;" href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a><a style="color:orange;" href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></p>
             </div>
         </div>
         <p align="center" style="color:white;font-weight: bold;">© 2025 Vedant Fashions Ltd. All rights reserved.</p>
@@ -366,6 +366,7 @@
  </body>
 
 </html>
+
 
 
 
