--- a/women.html
+++ b/women.html
@@ -10,7 +10,7 @@
 </head>
 <body style="overflow-x:hidden ;">
 	<div class="conatiner-fluid" style="background: #f8ecd7">
-				<div class="row g-5">
+				<div class="row g-5 mt-5">
                     <div class="col-md-3 col-sm-3 mt-5">
                      <img class="img-fluid" src="image\w18.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
                      <p >Dark Cream</p>
@@ -30,7 +30,7 @@
                      <button class="btn btn-primary">Buy</button>
                     </div>
                 </div>
-                <div class="row g-5">
+                <div class="row g-5 mt-5">
                     <div class="col-md-3 col-sm-3 mt-5">
                      <img class="img-fluid" src="image\w33.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
                      <p>Teal Blue</p>
@@ -50,7 +50,7 @@
                      <button class="btn btn-primary">Buy</button>
                     </div>
                 </div>
-                <div class="row g-5">
+                <div class="row g-5 mt-5">
                     <div class="col-md-3 col-sm-3 mt-5">
                      <img class="img-fluid" src="image\w36.png" alt="Manywar" class="d-block" style="width:100%;height:400px!important;">
                      <p>Anarkali Suit</p>
@@ -74,4 +74,5 @@
 </body>
 
 </html>
+
 
