--- a/index.html
+++ b/index.html
@@ -115,17 +115,12 @@
         
     <!-- Left and right controls/icons -->
 
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </button>
+    
    </div>
  </div>
- <div class="container-fluid" style="background: #f8ecd7;height: 50px;border: 1px solid #f8ecd7;">
+ <div class="container-fluid pt-5" style="background: #f8ecd7;height: 50px;border: 1px solid #f8ecd7;">
  </div>
- 	<div class="container-fluid" id="about" style="background: #f8ecd7;">
+ 	<div class="container-fluid pt-5" id="about" style="background: #f8ecd7;">
  		<li type="none" style="font-size: 30px;text-align: center;color: orange;"><i  class="fa-brands fa-canadian-maple-leaf"></i></li>
  		<li type="none" style="font-size: 50px;text-align: center;font-weight: bold;">WHAT'S YOUR VIBE?</li>
  	</div>
@@ -228,8 +223,8 @@
             <img class="img-fluid" style="height: 500px;width: 100%;"  src="image\w24.jpg">
             </div>
         </div>
-        <div id="jadoo" class="row mt-5">
-            <div class="col-md-4 offset-md-1 col-sm-12 mt-5">
+        <div id="jadoo" class="row mt-5 pt-5">
+            <div class="col-md-4 offset-md-1 col-sm-12 mt-5 pt-5">
             <img class="img-fluid" style="height: 400px;width: 100%;"  src="image\111.png"><br/>
             <h6 style="font-weight: bold;font-style: italic;text-align: justify;font-family: Harlow Solid Italic;">Your Personal Stylist At Your Service!</h6>
             <h6 style="font-weight: bold;font-style: italic;text-align: justify;font-family: Harlow Solid Italic;">Consult our expert stylist to curate a look for your D day</h6>
@@ -262,7 +257,7 @@
              </div>
         </div>
     </div>
-        <div class="col-md-4 offset-md-2 col-sm-12  mt-5">
+        <div class="col-md-4 offset-md-2 col-sm-12  mt-5 pt-5">
             <img class="img-fluid" style="height: 400px;width: 100%;"  src="image\w26.jpg"><br/>
             <h6 style="font-weight: bold;font-style: italic;text-align: justify;font-family: Harlow Solid Italic;">Your Dream Wedding Wardrobe, Just a click Away</h6>
             <h6 style="font-weight: bold;font-style: italic;text-align: justify;font-family: Harlow Solid Italic;">Design Your Wedding Wardrobe with Manyavar. It's Free</h6>
@@ -339,3 +334,4 @@
  </body>
 
 </html>
+
